--- a/Курсовая/css/normalize.css
+++ b/Курсовая/css/normalize.css
@@ -350,8 +350,10 @@
 
 * {
   box-sizing: border-box;
-  font-size: 16px;
   font-weight: 400;
+}
+body {
+  font-size: 16px;
   font-family: 'Open Sans';
   line-height: 32px;
 }
@@ -369,12 +371,11 @@ button {
   background: transparent;
   border: none;
   cursor: pointer;
+  padding: 0;
 }
 h1,h2,h3 {
   margin: 0;
-}
-section {
-  padding: 80px 0;
+  margin-left: -4px;
 }
 p {
   margin: 0;
