--- a/Курсовая/css/style.css
+++ b/Курсовая/css/style.css
@@ -172,12 +172,10 @@ section {
     width: 300px;
     height: 300px;
     padding: 40px;
-    padding-top: 10px;
     display: none;
 
     position: absolute;
-    top: 20px;
-    left: -60px;
+    top: 51px;
 
     background: rgba(0, 0, 0, 0.4);
 }
@@ -192,24 +190,61 @@ section {
     outline: 2px solid #D1A9F0;
 }
 .scroll__link {
+    position: relative;
     display: inline-block;
     width: 220px;
     height: 40px;
     padding: 4px 14px;
     background-repeat: no-repeat;
 }
-.simplebar-scrollbar {
-    background: #9D5CD0 !important;
-    width: 2px !important;
-    height: 28px !important;
+.scroll__link:active::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: inherit;
+    height: inherit;
+    background: rgba(194, 131, 243, 0.4);
+
+}
+.simplebar-scrollbar:before {
+    opacity: 1;
 }
 
-.simplebar-track {
-    margin-right: 12px;
-    margin-top: 20px;
+.simplebar-track.simplebar-vertical {
+    width: 2px;
     height: 220px;
+    margin-top: 40px;
+    margin-right: 19px;
+    background: #000000;
 }
-
+.simplebar-track.simplebar-vertical .simplebar-scrollbar:before {
+    left: 0;
+    right: 0;
+    background: #9D5CD0;
+}
+.simplebar-track.simplebar-vertical .simplebar-scrollbar:before {
+    bottom: 0;
+    top: 0;
+}
+.simplebar-scrollbar.simplebar-visible::before {
+    opacity: 1;
+}
+#scroll-1 {
+    left: -8%;
+}
+#scroll-2 {
+    left: 11%;
+}
+#scroll-3 {
+    left: 35%;
+}
+#scroll-4 {
+    left: 58%;
+}
+#scroll-5 {
+    left: 77%;
+}
 
 .scroll-active {
     display: block;
@@ -286,7 +321,7 @@ section {
     color: #fff;
 }
 .hero__btn:hover {
-    padding: 19px 29px;
+    padding: 16px 32px;
     border: 3px solid #D1A9F0;
 }
 .hero__btn:active {
