--- a/Курсовая/css/style.css
+++ b/Курсовая/css/style.css
@@ -541,6 +541,7 @@ section {
 /* Accordion */
 .accordion__title {
     display: flex;
+    position: relative;
     margin-top: -1px;
     padding: 39px 0 29px 0;
     border-top: 1px solid #CACACA;
@@ -548,13 +549,21 @@ section {
 }
 .accordion__title:hover {
     color:#9D5CD0;
-    border-top: 1px solid #9D5CD0;
-    border-bottom: 1px solid #9D5CD0;
+    border-color: #9D5CD0;
     z-index: 10;
 }
+.accordion__title:active {
+    color: #7943A4;
+    border-color: #7943A4;
+}
+
 .accordion__title:hover > .accordion__btn {
     background: #9D5CD0;
 }
+.accordion__title:active > .accordion__btn {
+    background: #7943A4;
+}
+
 .accordion__title:hover > .accordion__btn > svg > path{
     stroke: #fff;
 }
@@ -565,6 +574,7 @@ section {
     padding-left: 4px;
 }
 .accordion__content {
+    height: 341px;
     margin: 25px 0 30px 0;
 }
 .accordion__flex {
@@ -577,6 +587,19 @@ section {
     background: #ECECEC;
     border-radius: 100px;
     transform: scaleY(1);
+}
+.ui-accordion-content {
+    margin-bottom: 38px;
+}
+.accordion__title:active > .accordion__btn::after {
+    content: '';
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    width: 48px;
+    height: 48px;
+    border: 2px solid #D1A9F0;
+    border-radius: 100px;
 }
 .accordion__btn svg:not(.ui-state-active){
     transition: transform 0.5s;
