--- a/Курсовая/css/style.css
+++ b/Курсовая/css/style.css
@@ -370,7 +370,21 @@ section {
     background: transparent;
     color: #fff;
     padding: 0 15px;
+    appearance: none;
 }
+.gallery__select__block::after {
+    content: '';
+    display: block;
+    position: relative;
+    top: -25px;
+    left: 93%;
+    width: 7px;
+    height: 7px;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+    transform: rotate(45deg);
+}
+
 .gallery__desc {
     width: 340px;
     margin-top: auto;
