--- a/Курсовая/css/style.css
+++ b/Курсовая/css/style.css
@@ -96,7 +96,7 @@ section {
   color: #7943A4;
 }
 .menu__item:not(:last-child) {
-  margin-right: 64px;
+  margin-right: 62px;
 }
 .header__enter {
   display: inline-block;
@@ -125,7 +125,6 @@ section {
 .header__second-bg {
   display: flex;
   align-items: center;
-  height: 70px;
   background: rgba(0, 0, 0, 0.4);
 }
 .second {
@@ -134,6 +133,7 @@ section {
 .second__list {
   position: relative;
   margin-right: auto;
+  padding: 19px 0;
 }
 .second__item {
   margin-right: 98px;
@@ -173,11 +173,12 @@ section {
 }
 .header__search {
   position: relative;
+  padding: 19px 0;
 }
 .search__btn {
   position: absolute;
-  bottom: -2px;
-  left: -34px;
+  padding-top: 8px;
+  left: -33px;
 }
 .header__search:hover > .search__input {
   border-color: #C283F3;
@@ -210,11 +211,18 @@ section {
   max-height: 300px;
   padding: 40px;
   display: none;
+  opacity: 0;
 
   position: absolute;
-  top: 51px;
+  top: 70px;
 
   background: rgba(0, 0, 0, 0.4);
+
+  transition: opacity 1.3s;
+}
+.scroll-active {
+  display: block;
+  opacity: 1;
 }
 .scroll__list {
   display: flex;
@@ -268,9 +276,7 @@ section {
   opacity: 1;
 }
 
-.scroll-active {
-  display: block;
-}
+
 
 .scroll__item:not(:last-child) {
   margin-bottom: 20px;
@@ -288,7 +294,6 @@ section {
 
 /* Hero */
 .hero {
-  height: 630px;
   padding-top: 67px;
   padding-bottom: 122px;
 }
@@ -300,7 +305,6 @@ section {
   z-index: -1;
 }
 .hero__img {
-  height: 800px;
   object-fit: fill;
   animation: hero-ripple 5s infinite linear alternate;
 }
@@ -386,12 +390,15 @@ section {
   height: 40px;
 }
 .choices__inner {
-  height: 40px;
+  min-height: 38px;
   padding: 0 !important;
   padding-left: 15px !important;
   border: 1px solid #FFFFFF;
   border-radius: 6px;
   background: transparent;
+}
+.choices__item.is-selected {
+  display: none;
 }
 .is-open .choices__inner {
   border-radius: 6px;
@@ -400,13 +407,16 @@ section {
   color: #fff;
   opacity: 1;
 }
+.choices__list--single {
+  padding: 0;
+}
 .choices[data-type*=select-one]:after {
   content: '';
   border: none;
   display: block;
   position: relative;
-  top: -25px;
-  left: 93%;
+  top: -22px;
+  left: 94%;
   width: 7px;
   height: 7px;
   border-bottom: 1px solid #fff;
@@ -419,7 +429,7 @@ section {
   margin-top: 2px;
 }
 .choices__list--dropdown {
-  margin-top: 4px;
+  margin-top: -2px;
   background: transparent;
   border: 1px solid #FFFFFF;
   border-radius: 6px;
@@ -429,6 +439,7 @@ section {
   font-size: 16px;
 }
 .choices__list--dropdown .choices__item {
+  padding: 3px 20px;
   font-size: 16px;
   border-bottom: 1px solid #fff;;
 }
@@ -491,7 +502,6 @@ transition: opacity .15s;
 .swiper-container__btn,
 .swiper-container__editions {
   width: 1150px;
-  height: 812px;
   overflow: hidden;
 }
 .swiper-container__btn {
@@ -499,9 +509,10 @@ transition: opacity .15s;
 }
 .swiper__nav {
   display: flex;
-  width: 133px;
-  justify-content: space-between;
+  margin-right: auto;
   margin-bottom: 28px;
+}
+.gallery .swiper__nav {
   padding-left: 3px;
 }
 .swiper-button-next-1,
@@ -514,8 +525,12 @@ transition: opacity .15s;
   border-radius: 50%;
   transition: background .15s, border .15s;
 }
+.swiper-button-prev-1 {
+  margin-right: 19px;
+}
 .swiper-pagination-1 {
-  width: 35px;
+  width: auto;
+  margin-right: 19px;
   color: #fff;
 }
 .swiper-button-next-1::after,
@@ -768,8 +783,8 @@ transition: opacity .15s;
 
 /* Editions */
 .editions {
-  height: 763px;
-  background-image: url(../img/editions/bg.jpg);
+  padding-bottom: 77px;
+  background-image: url(../img/editions/bg.webp);
 }
 .editions__content {
   display: flex;
@@ -842,6 +857,7 @@ transition: opacity .15s;
 }
 /* Slider */
 .swiper-container__editions {
+  height: 100%;
   margin-top: 16px;
 }
 .slide-img__editions {
@@ -1076,7 +1092,7 @@ transition: opacity .15s;
 }
 .footer__content {
   display: flex;
-  padding: 50px 0;
+  padding: 50px 0 44px 0;
   justify-content: space-between;
 }
 .footer__link:not(:last-child) {
