--- a/Курсовая/css/style.css
+++ b/Курсовая/css/style.css
@@ -19,6 +19,9 @@
 html {
   scroll-behavior: smooth;
 }
+body._lock {
+  overflow: hidden;
+}
 *:focus {
   outline: 2px solid #7943A4;
   outline-offset: 3px;
@@ -28,8 +31,8 @@ html {
   margin-bottom: 31px;
 }
 .container {
-  width: 1612px;
-  padding: 0 6px;
+  max-width: 1620px;
+  padding: 0 10px;
   margin: 0 auto;
 }
 section {
@@ -61,13 +64,18 @@ section {
   color: #7943A4;
   border-bottom: 1px solid #7943A4;
 }
+.burger,
+.first__search,
+.hide {
+  display: none;
+}
 
 .flex {
   display: flex;
 }
 
 /* Header */
-.header__first-bg {
+.header__first_bg {
   background: #000000;
 }
 .first {
@@ -98,7 +106,7 @@ section {
   color: #7943A4;
 }
 .menu__item:not(:last-child) {
-  margin-right: 62px;
+  margin-right: 11%;
 }
 .header__enter {
   display: inline-block;
@@ -124,7 +132,7 @@ section {
   content: url(../img/header/enter-active.svg)
 }
 
-.header__second-bg {
+.header__second_bg {
   display: flex;
   align-items: center;
   background: rgba(0, 0, 0, 0.4);
@@ -173,6 +181,7 @@ section {
 .second__btn_active > svg > path {
   stroke: #7943A4;
 }
+
 .header__search {
   position: relative;
   padding: 19px 0;
@@ -182,13 +191,13 @@ section {
   padding-top: 8px;
   left: -33px;
 }
-.header__search:hover > .search__input {
+.search:hover > .search__input {
   border-color: #C283F3;
 }
 .search__btn > svg > rect, .search__btn > svg > path {
   transition: fill .15s;
 }
-.header__search:hover > .search__btn > svg > rect, .header__search:hover > .search__btn > svg > path  {
+.search:hover > .search__btn > svg > rect, .header__search:hover > .search__btn > svg > path  {
   fill: #C283F3;
 }
 .search__input {
@@ -373,6 +382,7 @@ section {
   display: flex;
   flex-flow: column wrap;
   align-content: space-between;
+  align-items: flex-start;
   height: 835px;
 }
 .gallery__title {
@@ -461,27 +471,24 @@ section {
 }
 
 /* Слайдер с кнопками для галереи и издания */
-.slider {
-width: 1200px;
-height: 750px;
-display: flex;
-flex-wrap: wrap;
-align-content: space-between;
-}
 .slide-img {
-width: 350px;
-height: 350px;
+  width: 350px;
+  height: 350px;
+}
+.slide-img img {
+  width: 100%;
+  height: 100%;
 }
 .slide-img::before {
-content: '';
-position: absolute;
-top: 0;
-left: 0;
-width: 350px;
-height: 350px;
-opacity: 0;
-background: rgba(194, 131, 243, 0.4);
-transition: opacity .15s;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background: rgba(194, 131, 243, 0.4);
+  transition: opacity .15s;
 }
 .slide-img:active::before {
   opacity: 1;
@@ -671,6 +678,7 @@ transition: opacity .15s;
 }
 .accordion__flex {
   display: flex;
+  max-height: 310px;
 }
 .accordion__btn {
   width: 50px;
@@ -680,6 +688,9 @@ transition: opacity .15s;
   border-radius: 100px;
   transform: scaleY(1);
   transition: background .3s;
+}
+.accordion__content {
+  height: auto;
 }
 .accordion__title:active > .accordion__btn::after {
   content: '';
@@ -700,8 +711,11 @@ transition: opacity .15s;
   transform: scaleY(-1);
 }
 .accordion__list {
-  height: 100%;
+  width: 100%;
+  padding-right: 13.5%;
   flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-between;
 }
 .accordion__list:not(:last-child){
   margin-right: 63px;
@@ -731,20 +745,23 @@ transition: opacity .15s;
 }
 .events__cards {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 52px;
+  margin: 0 -25px 52px -25px;
 }
 .card-events {
-  width: 500px;
-  height: 700px;
-  border: 1px solid #CACACA;
+  padding: 0 25px;
+  flex: 0 1 33.33333%;
+}
+.card__img {
+  width: 100%;
 }
 .card-events__content {
   display: flex;
-  height: 400px;
+  margin-top: -10px;
+  min-height: 400px;
   flex-direction: column;
   align-items: flex-start;
-  padding: 3px 18px 50px 50px;
+  padding: 12px 18px 50px 50px;
+  border: 1px solid #CACACA;
 }
 .card-events__location, .card-events__date {
   align-self: flex-end;
@@ -1116,22 +1133,177 @@ transition: opacity .15s;
 .footer__link:not(:last-child) {
   margin-right: 12px;
 }
+
+
 @media (max-width: 1024px) {
   .container {
-    width: 924px;
+    max-width: 944px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .first {
+    position: relative;
+    height: 100px;
+  }
+  .logo {
+    position: absolute;
+    width: 190px;
+    left: 39.6%;
   }
   .burger {
-    width: 40px;
-    height: 40px;
+    position: relative;
+    margin-left: 7px;
+    display: block;
+    width: 36px;
+    height: 28px;
+    z-index: 10;
   }
   .burger__line {
     width: 100%;
+    top: 46%;
+  }
+  .burger::after,
+  .burger::before,
+  .burger__line {
+    position: absolute;
+    left: -6px;
+    height: 4px;
+    background: #fff;
+    transition: transform .3s;
   }
   .burger::after,
   .burger::before {
     content: '';
-    width: 100%;
-    height: 2px;
-    background: #fff;
   }
+  .burger::before {
+    top: 0;
+    width: 100%;
+    transition: top .3s;
+  }
+  .burger::after {
+    bottom: 0;
+    width: 61%;
+    transition: bottom .3s, width .3s;
+  }
+  .burger__line {
+    width: 75%;
+  }
+  .burger._active .burger__line{
+    transform: scale(0);
+  }
+  .burger._active::before{
+    top: 50%;
+    transform: rotate(-45deg);
+  }
+  .burger._active::after{
+    bottom: 37%;
+    transform: rotate(45deg) translate(0, -45%);
+    width: 100%;
+  }
+
+  .menu__list {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: .9;
+    transition: top .3s;
+    overflow: auto;
+    z-index: 10;
+  }
+  .header__enter {
+    position: fixed;
+    top: -100%;
+    transition: top .3s;
+  }
+  .header__enter._active {
+    position: absolute;
+    padding: 13px 89px;
+    border: 2px solid #9D5CD0;
+    border-radius: 100px;
+    z-index: 10;
+    top: 656%;
+  }
+  .menu__list._active {
+    top: 0;
+  }
+  .menu__list {
+    flex-direction: column;
+    padding: 112px 0 50px 50px;
+  }
+  .menu__item {
+    margin-bottom: 30px;
+  }
+  .menu__link {
+    font-size: 24px;
+  }
+
+  .header__second-bg {
+    display: none;
+  }
+
+  .search__btn_open {
+    top: 25%;
+    left: 90%;
+    display: block;
+    width: 30px;
+    height: 30px;
+  }
+
+
+
+  .hero {
+    padding-top: 110px;
+  }
+  .hero__content {
+    padding-right: 20%;
+  }
+  .hero__title {
+    margin-bottom: 9px;
+  }
+  .hero__desc {
+    margin-bottom: 133px;
+  }
+  .swiper-container {
+    height: 768px;
+  }
+  .about {
+    padding-top: 89px;
+  }
+  .about__desc,
+  .catalog__desc {
+    width: auto;
+  }
+  .gallery,
+  .gallery__content {
+    height: 839px;
+  }
+  .swiper-container__btn,
+  .swiper-container__editions {
+    width: 594px;
+  }
+  .slide-img {
+    height: 280px;
+  }
+  .choices__inner,
+  .gallery__filter,
+  .gallery__desc {
+    width: 280px;
+  }
+  .gallery__desc {
+    margin-top: 366px;
+  }
+  .language {
+    padding-top: 5px;
+  }
+  .content__left,
+  .content__right {
+    width: 47.2%;
+  }
+  .left__img {
+    width: 100%;
+  }
+
 }
