--- a/Курсовая/css/style.css
+++ b/Курсовая/css/style.css
@@ -80,8 +80,9 @@ section {
 }
 .first {
   display: flex;
+  width: 100%;
   align-items: center;
-  padding: 30px 0;
+  padding: 30px 10px 30px 5px;
 }
 .logo {
   padding-left: 5px;
@@ -106,7 +107,7 @@ section {
   color: #7943A4;
 }
 .menu__item:not(:last-child) {
-  margin-right: 11%;
+  margin-right: 12%;
 }
 .header__enter {
   display: inline-block;
@@ -123,7 +124,6 @@ section {
 .header__enter::before {
   content: url(../img/header/enter.svg);
   padding-right: 7px;
-  color: #C283F3;
 }
 .header__enter:hover::before {
   content: url(../img/header/enter-hover.svg)
@@ -139,6 +139,7 @@ section {
 }
 .second {
   display: flex;
+  width: 100%;
 }
 .second__list {
   position: relative;
@@ -318,6 +319,8 @@ section {
 .hero__img {
   height: 800px;
   object-fit: fill;
+}
+.hero__img > * {
   animation: hero-ripple 5s infinite linear alternate;
 }
 
@@ -391,6 +394,7 @@ section {
 }
 .gallery__filter {
   width: 400px;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -463,11 +467,13 @@ section {
 }
 
 .gallery__desc {
-  width: 340px;
   margin-top: auto;
   margin-bottom: 9px;
   color: #fff;
   letter-spacing: 0.03em;
+}
+.gallery__desc._adaptive {
+  display: none;
 }
 
 /* Слайдер с кнопками для галереи и издания */
@@ -655,7 +661,7 @@ section {
 }
 .ui-accordion-content {
   margin-top: 25px;
-  margin-bottom: 30px;
+  margin-bottom: 7px;
 }
 
 .accordion__title:hover > .accordion__btn {
@@ -749,7 +755,7 @@ section {
 }
 .card-events {
   padding: 0 25px;
-  flex: 0 1 33.33333%;
+  flex: 1 1 33.33333%;
 }
 .card__img {
   width: 100%;
@@ -760,7 +766,7 @@ section {
   min-height: 400px;
   flex-direction: column;
   align-items: flex-start;
-  padding: 12px 18px 50px 50px;
+  padding: 12px 18px 40px 50px;
   border: 1px solid #CACACA;
 }
 .card-events__location, .card-events__date {
@@ -783,10 +789,12 @@ section {
 }
 .card-events__description {
   margin-bottom: auto;
+  padding-right: 20px;
 }
 .card-events__details {
   display: inline;
   color: #9D5CD0;
+  line-height: 25px;
   letter-spacing: .03em;
   border-bottom: 1px solid #9D5CD0;
   transition: font-weight .15s, letter-spacing .15s;
@@ -922,6 +930,7 @@ section {
 }
 .price__content {
   display: flex;
+  width: 277px;
   height: 40px;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 6px
@@ -1071,10 +1080,10 @@ section {
   margin-bottom: 30px;
 }
 .connect {
-  width: 675px;
   height: 702px;
-  padding: 124px 152px 124px 150px;
+  padding: 124px 3% 124px 8%;
   border: 1px solid #CACACA;
+  flex: 0 0 35.4%;
 }
 .connect__title {
   margin-bottom: 4px;
@@ -1138,8 +1147,6 @@ section {
 @media (max-width: 1024px) {
   .container {
     max-width: 944px;
-    padding-left: 10px;
-    padding-right: 10px;
   }
   .first {
     position: relative;
@@ -1196,7 +1203,7 @@ section {
     transform: rotate(-45deg);
   }
   .burger._active::after{
-    bottom: 37%;
+    bottom: 33%;
     transform: rotate(45deg) translate(0, -45%);
     width: 100%;
   }
@@ -1226,6 +1233,16 @@ section {
     z-index: 10;
     top: 656%;
   }
+  .header__enter._active:hover {
+    background: #9D5CD0;
+    color: #fff;
+  }
+  .header__enter:hover::before,
+  .header__enter:active::before{
+    margin-left: -4px;
+    content: url(../img/header/enter--.svg);
+  }
+
   .menu__list._active {
     top: 0;
   }
@@ -1246,17 +1263,16 @@ section {
 
   .search__btn_open {
     top: 25%;
-    left: 90%;
+    left: 95%;
     display: block;
-    width: 30px;
-    height: 30px;
   }
 
   .hero {
     padding-top: 110px;
   }
-  .hero__content {
-    padding-right: 20%;
+  .hero__content,
+  .hero__title {
+    padding-right: 19%;
   }
   .hero__title {
     margin-bottom: 9px;
@@ -1279,6 +1295,9 @@ section {
   .gallery__content {
     height: 839px;
   }
+  .gallery__desc {
+    margin-top: 342px;
+  }
   .swiper-container__btn {
     width: 594px;
   }
@@ -1286,12 +1305,8 @@ section {
     height: 280px;
   }
   .choices__inner,
-  .gallery__filter,
-  .gallery__desc {
+  .gallery__filter {
     width: 280px;
-  }
-  .gallery__desc {
-    margin-top: 366px;
   }
   .language {
     padding-top: 5px;
@@ -1368,6 +1383,116 @@ section {
     margin-top: -9px;
     padding: 0;
   }
+  .accordion__flex {
+    max-height: 408px;
+  }
+  .accordion__list {
+    padding-right: 10px;
+  }
+}
 
+@media(max-width: 768px) {
+  .container {
+    max-width: 688px
+  }
+  .hero__content,
+  .gallery .swiper__nav,
+  .language {
+    padding: 0;
+  }
+  .hero__content,
+  .first {
+    padding-left: 9px;
+  }
+  .logo {
+    left: 35.7%;
+  }
+  .hero__title {
+    padding-right: 17%;
+  }
 
+  .gallery {
+    height: 1169px;
+  }
+  .choices {
+    margin-bottom: 100px;
+  }
+  .gallery__content {
+    flex-direction: row;
+  }
+  .gallery__filter {
+    height: auto;
+  }
+  .gallery__desc {
+    display: none;
+  }
+  .gallery__desc._adaptive {
+    display: block;
+    margin-top: 30px;
+  }
+  .swiper-container__btn {
+    width: 668px;
+    height: 663px;
+  }
+
+  .catalog__content {
+    flex-direction: column-reverse;
+  }
+  .content__right,
+  .content__left {
+    width: 100%;
+  }
+  .catalog__desc {
+    margin-bottom: 20px;
+  }
+  .accordion__flex {
+    max-height: 310px;
+  }
+  .language__item:not(:last-child) {
+    margin-right: 54px;
+  }
+  #accordion {
+    margin-bottom: 52px;
+  }
+  .events {
+    padding-top: 85px;
+  }
+  .card-events:nth-child(3) {
+    display: none;
+  }
+  .card-events__content {
+    padding: 14px 18px 47px 35px;
+  }
+  .card-events__title {
+    padding-right: 10px;
+  }
+  .editions__content {
+    flex-direction: column;
+  }
+  .checkbox__list {
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-height: 130px;
+  }
+  .editions__ledt-column {
+    margin-bottom: 31px;
+  }
+  .swiper-container__editions {
+    flex: 0 0 100%;
+  }
+  .swiper-container__editions .swiper-wrapper {
+    padding-left: 27px;
+  }
+
+  .editions {
+    height: 1048px;
+    background-image: url(../img/editions/bg-m.jpg);
+  }
+  .projects__desc {
+    padding-right: 5px;
+    margin-bottom: 27px;
+  }
+  .swiper-container__projects {
+    width: 562px;
+  }
 }
